# advent-2023

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  index.html  input.css  package-lock.json  shell.nix  tailwind.config.js  tailwind.css
.github/workflows/: rust.yaml
assets/dioxus/: advent-2023.js  advent-2023_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
public/: tailwind.css
src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  main.rs  util.rs
