[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-logger = "0.4.1"
dioxus-web = "0.4.0"
indoc = "2.0.4"
log = "0.4.20"
paste = "1.0.14"
serde_json = "1.0.108"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["Window", "Location", "Performance"] }

[dev-dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
env_logger = "0.10.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
test-log = "0.2.13"
