[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arr_macro = "0.2.1"
counter = "0.5.7"
dioxus = "0.4.0"
dioxus-logger = "0.4.1"
dioxus-web = "0.4.0"
indoc = "2.0.4"
itertools = "0.12.0"
log = "0.4.20"
num = "0.4.1"
paste = "1.0.14"
serde_json = "1.0.108"
sha1 = "0.10.6"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["Window", "Location", "Performance"] }

[dev-dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
env_logger = "0.10.1"
reqwest = { version = "0.11.22", features = ["blocking"] }
test-log = "0.2.13"
